feat: add scheduling update titles series